--- a/config.ini
+++ b/config.ini
@@ -7,7 +7,7 @@ pes_objectiu=2.5
 pes_obstacle=0.5
 heading=45.0
 t_espera=200.0 ; temps d'espera entre moviments
-angle_bordejar_parets=-90.0
+angle_seguir_parets=-90.0
 tasca=0 ; 1 = alt nivell, 0 = baix nivell
 do=300.0 ; distancia de marge entre l'objectiu i el robot
 dr=45.0 ; angle limit de rotacio
