--- a/config.ini
+++ b/config.ini
@@ -1,25 +1,24 @@
 [parametres]
-th=45.0 ; angle
-vel=400.0 ; vel. recomanada = 100
-dist_min=500.0 ; dist. minima de seguretat
-dist_max=1200.0 ; dist. a la qual se poden detectar obstacles
-pes_objectiu=3.0 
-pes_obstacle=0.5
+debug=1 ; 0 deshabilitat, 1 = habilitat
+vel=500.0 ; vel. recomanada = 100
+dist_min=300.0 ; dist. minima de seguretat
+dist_max=1000.0 ; dist. a la qual se poden detectar obstacles
+pes_objectiu=1.0
 heading=45.0
-t_espera=300.0 ; temps d'espera entre moviments
-angle_seguir_parets=-90.0 ; -90
-tasca=0 ; 1 = alt nivell, 0 = baix nivell
+t=300.0 ; temps d'espera entre moviments (ms)
+angle_seguir_parets=-90.0
+tasca=1 ; 1 = alt nivell, 0 = baix nivell
 do=300.0 ; distancia de marge entre l'objectiu i el robot
 dr=45.0 ; angle limit de rotacio
 [pesos]
-pes_sensor0=0.5
-pes_sensor1=1.2
-pes_sensor2=2.1
-pes_sensor3=3.0
-pes_sensor4=3.0
-pes_sensor5=2.1
-pes_sensor6=1.2
-pes_sensor7=0.5
+pes_sensor0=0.3
+pes_sensor1=0.5
+pes_sensor2=0.7
+pes_sensor3=1.0
+pes_sensor4=1.0
+pes_sensor5=0.7
+pes_sensor6=0.5
+pes_sensor7=0.3
 pes_sensor8=0.1
 pes_sensor9=0.05
 pes_sensor10=0.03
@@ -33,8 +32,8 @@ npunts=4
 p1x=8000.0
 p1y=8000.0
 p2x=666.0
-p2y=777.0
-p3x=56.8
-p3y=66.3
-p4x=3000.0
-p4y=-4000.0
+p2y=666.0
+p3x=59.2
+p3y=69.7
+p4x=2000.0
+p4y=-3000.0
